--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "hw_app",
-    "slug": "hw_app",
+    "name": "myNewProject",
+    "slug": "myNewProject",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
